// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/FileInfoPreview should match snapshot, can download files 1`] = `
<div>
  <div
    class="file-details__container"
  >
    <a
      class="file-details__preview"
      href="https://pre-release.mattermost.com/api/v4/files/rqir81f7a7ft8m6j6ej7g1txuo"
    >
      <span
        class="file-details__preview-helper"
      />
      <img
        alt="file preview"
        src=""
      />
    </a>
    <div
      class="file-details"
    >
      <div
        class="file-details__name"
      >
        Test Image
      </div>
      <div
        class="file-details__info"
      >
        File type JPG, Size 100B
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FileInfoPreview should match snapshot, cannot download files 1`] = `
<div>
  <div
    class="file-details__container"
  >
    <span
      class="file-details__preview"
    >
      <span
        class="file-details__preview-helper"
      />
      <img
        alt="file preview"
        src=""
      />
    </span>
    <div
      class="file-details"
    >
      <div
        class="file-details__name"
      >
        Test Image 2
      </div>
      <div
        class="file-details__info"
      >
        File type PNG, Size 200B
      </div>
    </div>
  </div>
</div>
`;
